--- a/index.html
+++ b/index.html
@@ -47,28 +47,15 @@ html, body {
   position: absolute;
   top: 12%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-30%);
   text-align: center;
   z-index: 2;
   color: #9e3434;
 }
 
-.cover-text h3 {
-  margin: 0;
-  letter-spacing: 1px;
-  font-size: 14px;
-}
-
-.cover-text h1 {
-  margin: 8px 0 6px;
-  font-family: "Playfair Display", serif;
-  font-size: 34px;
-}
-
-.cover-text p {
-  margin: 0;
-  font-size: 14px;
-}
+.cover-text h3 { margin: 0; letter-spacing: 1px; font-size: 14px; }
+.cover-text h1 { margin: 8px 0 6px; font-family: "Playfair Display", serif; font-size: 34px; }
+.cover-text p { margin: 0; font-size: 14px; }
 
 /* GUEST */
 .guest-name {
@@ -153,17 +140,15 @@ html, body {
   flex-direction: column;
   justify-content: center;
 }
+
 .slideshow-container {
   height: 100%;
   border-radius: 18px;
   overflow: hidden;
 }
+
 .slide { display: none; height: 100%; }
-.slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+.slide img { width: 100%; height: 100%; object-fit: cover; }
 
 /* RIGHT */
 .right-side {
@@ -199,25 +184,28 @@ html, body {
 
 /* NAV BUTTON SECTION */
 .nav-buttons {
+  display: none !important; /* pastikan selalu hidden di awal */
   position: fixed;
   top: 50%;
   right: 16px;
   transform: translateY(-50%);
-  display: flex;
   flex-direction: column;
   gap: 10px;
   z-index: 10;
 }
 
-.nav-buttons button {
-  padding: 8px 12px;
-  border: none;
-  border-radius: 8px;
-  background: #9e3434;
-  color: #fff;
-  cursor: pointer;
-  font-size: 12px;
+@media (max-width: 768px) {
+  .nav-buttons {
+    display: none !important; /* tetap hidden di mobile sebelum buka undangan */
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 12px;
+    transform: none;
+  }
 }
+
+
+
 
 /* MOBILE */
 @media (max-width: 768px) {
@@ -320,7 +308,7 @@ html, body {
 
 </div>
 
-<!-- NAV BUTTONS -->
+<!-- NAV BUTTONS (hanya muncul di page 2) -->
 <div class="nav-buttons">
   <button onclick="scrollToSection(0)">Mempelai</button>
   <button onclick="scrollToSection(1)">Acara</button>
@@ -342,10 +330,12 @@ const mainPage = document.getElementById("mainPage");
 function openInvitation(){
   cover.style.display = "none";
   mainPage.style.display = "flex";
+  document.querySelector(".nav-buttons").style.display = "flex"; // tampilkan button
   startSlide();
   music.play();
   musicBtn.style.display = "flex";
 }
+
 
 // TOGGLE MUSIC
 function toggleMusic(){
