--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@ html, body {
 }
 
 .cover-text h3 { margin: 0; letter-spacing: 1px; font-size: 14px; }
-.cover-text h1 { margin: 8px 0 6px; font-family: "Playfair Display", serif; font-size: 34px; }
+.cover-text h1 { 
+  margin: 8px 0 6px; 
+  font-family: "Playfair Display", serif; 
+  font-size: 28px; /* dikecilkan dari 34px */
+}
 .cover-text p { margin: 0; font-size: 14px; }
 
 .guest-name {
@@ -106,46 +110,42 @@ html, body {
   display: none; /* tersembunyi sebelum klik buka undangan */
   width: 100%;
   height: 100vh;
-  display: flex;
+  flex-direction: column;
 }
 
 /* LEFT SIDE - SLIDESHOW */
 .left-side {
-  width: 55%;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  width: 100%;
+  height: auto; /* auto agar mobile tidak kepotong */
 }
 
 .slideshow-container {
-  height: 100%;
-  border-radius: 18px;
-  overflow: hidden;
+  width: 100%;
 }
 
-.slide { display: none; height: 100%; }
-.slide img { width: 100%; height: 100%; object-fit: cover; }
+.slide { display: none; width: 100%; }
+.slide img { width: 100%; height: auto; object-fit: contain; } /* object-fit contain agar tidak crop */
 
 /* RIGHT SIDE - SCROLLABLE SECTION */
 .right-side {
-  width: 45%;
-  height: 100%;
+  width: 100%;
+  height: auto; /* menyesuaikan konten */
+  max-height: 50vh; /* maksimal setengah layar */
   overflow-y: auto;
-  padding: 40px 26px 180px;
+  padding: 20px;
 }
 
 .section-box {
-  margin-bottom: 40px;
-  padding: 28px;
-  border-radius: 18px;
+  margin-bottom: 20px;
+  padding: 20px;
+  border-radius: 12px;
   background: rgba(255,255,255,0.45);
   text-align: center;
 }
 
 .mempelai-img {
-  width: 140px;
-  height: 140px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 10px;
@@ -163,16 +163,16 @@ html, body {
 .nav-buttons {
   display: none;
   position: fixed;
-  top: 50%;
-  right: 16px;
-  transform: translateY(-50%);
-  flex-direction: column;
-  gap: 10px;
+  bottom: 12px;
+  left: 50%;
+  transform: translateX(-50%);
+  flex-direction: row;
+  gap: 6px;
   z-index: 10;
 }
 
 .nav-buttons button {
-  padding: 6px 14px;
+  padding: 6px 12px;
   background: #9e3434;
   color: #fff;
   border: none;
@@ -183,8 +183,8 @@ html, body {
 /* MUSIC BUTTON */
 .music-btn {
   position: fixed;
-  bottom: 24px;
-  right: 24px;
+  bottom: 70px;
+  right: 16px;
   width: 46px;
   height: 46px;
   border-radius: 50%;
@@ -198,13 +198,11 @@ html, body {
   z-index: 999;
 }
 
-/* MOBILE RESPONSIVE */
+/* RESPONSIVE MOBILE */
 @media (max-width: 768px) {
-  #mainPage { flex-direction: column; }
-  .left-side, .right-side { width: 100%; }
-  .left-side { height: 50vh; margin-bottom: 20px; }
-  .right-side { height: auto; max-height: none; padding: 20px 16px 120px; }
-  .nav-buttons { position: static; flex-direction: row; justify-content: center; margin-bottom: 12px; display: flex; gap:6px; }
+  #mainPage { flex-direction: column; height: auto; }
+  .left-side { height: auto; }
+  .right-side { max-height: none; padding: 16px; }
 }
 </style>
 </head>
@@ -253,7 +251,7 @@ html, body {
     <img src="andre.jpg" class="mempelai-img">
     <h3>Andre Firdaus Siadari, S.I.P.</h3>
     <p>Putra dari Bapak D. Siadari<br>dan Ibu Y. Gultom</p>
-    <img src="ester.jpg" class="mempelai-img" style="margin-top:20px">
+    <img src="ester.jpg" class="mempelai-img" style="margin-top:10px">
     <h3>Ftr. Ester Yunita Yolanda Manurung, S.Kes</h3>
     <p>Putri dari Bapak P. Manurung<br>dan Ibu T. Silitonga</p>
   </section>
@@ -263,14 +261,14 @@ html, body {
     <h3>Jadwal Acara</h3>
     <p><b>Pemberkatan</b><br>Jumat, 16 Januari 2026<br>GMI Tobasari, Sidamanik</p>
     <a href="#" class="map-link">📍 Lihat Lokasi</a>
-    <p style="margin-top:16px"><b>Resepsi</b><br>Jumat, 16 Januari 2026<br>Balai Pertemuan Sidamanik</p>
+    <p style="margin-top:10px"><b>Resepsi</b><br>Jumat, 16 Januari 2026<br>Balai Pertemuan Sidamanik</p>
     <a href="#" class="map-link">📍 Lihat Lokasi</a>
   </section>
 
   <!-- GALLERY -->
   <section class="section-box">
     <h3>Gallery</h3>
-    <p>Momen kebahagiaan kami ditampilkan<br>melalui slideshow di samping</p>
+    <p>Momen kebahagiaan kami ditampilkan melalui slideshow di atas</p>
   </section>
 
   <!-- GIFT -->
@@ -299,31 +297,27 @@ const musicBtn = document.querySelector(".music-btn");
 const cover = document.getElementById("cover");
 const mainPage = document.getElementById("mainPage");
 
-let slideInterval; // untuk slideshow auto
-let autoScrollInterval; // untuk scroll section
+let slideInterval;
+let autoScrollInterval;
 
 // OPEN INVITATION
 function openInvitation(){
   cover.style.display = "none";
   mainPage.style.display = "flex";
-  document.body.style.overflow = "hidden"; // tetap fullscreen
+  document.body.style.overflow = "hidden";
 
-  // Mulai musik
   music.play();
   musicBtn.style.display = "flex";
-
-  // Tampilkan tombol navigasi
   document.querySelector(".nav-buttons").style.display = "flex";
 
-  // Mulai slideshow
   startSlide();
 
-  // Mulai auto-scroll section
+  // Auto scroll sections
+  const sections = document.querySelectorAll(".right-side .section-box");
+  let currentSection = 0;
   autoScrollInterval = setInterval(()=>{
-    let sections = document.querySelectorAll(".right-side .section-box");
-    let currentIndex = Array.from(sections).findIndex(s=>s.getBoundingClientRect().top >= 0);
-    let nextIndex = (currentIndex + 1) % sections.length;
-    sections[nextIndex].scrollIntoView({behavior: "smooth", block: "start"});
+    currentSection = (currentSection + 1) % sections.length;
+    sections[currentSection].scrollIntoView({behavior: "smooth", block: "start"});
   }, 15000);
 }
 
